# OMNIA-VALIDATION

./: .gitignore  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  SECURITY.md  TOTALITY-FIELD.md  VALIDATION_ROADMAP.md  cross_domain_invariance_v0_2.py  ecosystem_manifest.json  observer_family_geometry_stability_v0_results.json  pyproject.toml  requirements-dev.txt
Scrivi examples/: temporal_collapse_topology_dependency_map_v0.py
data/: structural_benchmark_dataset_v0.jsonl  temporal_collapse_actual_gsm_symbolic_model_outputs_v10.jsonl  temporal_collapse_cross_provider_disagreement_v13.jsonl  temporal_collapse_direct_gsm_symbolic_answer_traces_v9.jsonl  temporal_collapse_direct_gsm_symbolic_records_v8.jsonl  temporal_collapse_external_raw_trajectories_v4.jsonl  temporal_collapse_external_source_hash_strengthened_v15.jsonl  temporal_collapse_external_source_raw_trajectories_v6.jsonl  temporal_collapse_multi_source_real_gsm_symbolic_model_outputs_v12.jsonl  temporal_collapse_raw_trajectories_v3.jsonl  temporal_collapse_real_gsm_symbolic_model_outputs_v11.jsonl  temporal_collapse_repeated_run_cross_provider_stability_v14.jsonl  temporal_collapse_verified_external_source_raw_trajectories_v7.jsonl  temporal_collapse_verified_independent_raw_trajectories_v5.jsonl
docs/: ACTIVE_CLAIM_MICRO_FIX_REPORT.json  ACTIVE_CLAIM_MICRO_FIX_REPORT.md  ADVERSARIAL_REPRESENTATION_V0_RESULT.md  ARTIFACT_CONTRACT.md  ARTIFACT_HASH_MANIFEST_POLICY.md  BACKBONE_CI.md  BACKBONE_CONTRACT_STANDARD.md  BOUNDARY.md  CONSOLIDATION_ROADMAP_V0.md  (+191 more)
(+384 files in other folders)
