[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "omnia-validation"
version = "0.1.0"
description = "Structural validation, falsification, perturbation testing, and reproducibility layer for the OMNIA ecosystem."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Brighindi Massimiliano" }
]
keywords = [
  "omnia",
  "structural-validation",
  "falsification",
  "perturbation",
  "reproducibility",
  "ai-safety",
  "structural-measurement"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Testing"
]

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]

[project.scripts]
omnia-validation = "omnia_validation.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["omnia_validation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []